# haskakafka

./: .gitignore  Haskakafka.cabal  LICENSE  README.md  haskakafka.cabal  stack.yaml
example/: Basic.hs  Simple.hs
src/: Haskakafka.hs  Tester.hs
src/Haskakafka/: Consumer.hs  ConsumerExample.hs  Example.hs  Internal.chs  InternalEnum.chs  InternalMetadata.hs  InternalRdKafka.chs  InternalRdKafkaEnum.chs  InternalSetup.hs  InternalShared.hs  InternalTypes.hs
src/Haskakafka/Consumer/Internal/: Convert.hs  Types.hs
tests/: TestMain.hs
