name:                haskakafka
version:             0.1.0.5
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Thomas Dimson
maintainer:          tdimson@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  Build-tools: c2hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , unix
                     , bytestring
  exposed-modules:
    Haskakafka
    Haskakafka.Internal
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -threaded
  include-dirs:        /usr/local/include/librdkafka
  extra-lib-dirs: /usr/local/lib
  extra-libraries:     rdkafka

executable tester_bester
  hs-source-dirs: src
  main-is: Tester.hs
  other-modules: Haskakafka.Internal, Haskakafka
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , unix
                     , bytestring
  default-language:    Haskell2010
  ghc-options: -Wall -threaded
  include-dirs:        /usr/local/include/librdkafka
  extra-lib-dirs: /usr/local/lib
  extra-libraries:     rdkafka

test-suite tests
  type: exitcode-stdio-1.0
  Default-language:    Haskell2010
  Main-Is: TestMain.hs
  HS-Source-Dirs: tests
  ghc-options: -Wall -threaded
  build-depends:  base >=4.6 && <4.7
                , hspec
                , bytestring
                , haskakafka
