name:                haskakafka
version:             0.2.0.2
synopsis:            Kafka bindings for Haskell
description:         Use Apache Kafka in Haskell through the librdkafka
                     C library. The library is preliminary but fully
                     functional. 
homepage:            http://github.com/cosbynator/haskakafka
license:             MIT
license-file:        LICENSE
author:              Thomas Dimson <tdimson@cs.stanford.edu>
maintainer:          Thomas Dimson <tdimson@cs.stanford.edu>
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/cosbynator/haskakafka.git

library
  Build-tools: c2hs
  build-depends:       base >=4.7 && < 5
                     , containers
                     , unix
                     , bytestring
  exposed-modules:
    Haskakafka
    Haskakafka.Internal
    Haskakafka.InternalEnum
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall 
  include-dirs:        /usr/local/include/librdkafka
  extra-lib-dirs: /usr/local/lib
  extra-libraries:     rdkafka

test-suite tests
  type: exitcode-stdio-1.0
  Default-language:    Haskell2010
  Main-Is: TestMain.hs
  HS-Source-Dirs: tests
  ghc-options: -Wall -threaded
  build-depends:  base >=4.7 && < 5
                , hspec
                , bytestring
                , haskakafka
