name:                haskakafka
version:             1.2.0
synopsis:            Kafka bindings for Haskell
description:         Apache Kafka bindings backed by the librdkafka
                     C library. This implies full consumer and producer
                     support for Kafka 0.9.x.
homepage:            http://github.com/cosbynator/haskakafka
license:             MIT
license-file:        LICENSE
author:              Thomas Dimson <tdimson@cs.stanford.edu>
maintainer:          Thomas Dimson <tdimson@cs.stanford.edu>
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/cosbynator/haskakafka.git

library
  Build-tools: c2hs
  build-depends:       base >=4.6 && < 5
                     , bytestring
                     , containers
                     , temporary
                     , unix
  exposed-modules:
    Haskakafka
    Haskakafka.InternalRdKafkaEnum
    Haskakafka.InternalRdKafka
    Haskakafka.InternalSetup
    Haskakafka.InternalTypes
    Haskakafka.ConsumerExample
    Haskakafka.Consumer
    Haskakafka.Consumer.Internal.Convert
    Haskakafka.Consumer.Internal.Types
    Haskakafka.InternalShared
  other-modules:
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  pkgconfig-depends:   rdkafka
  if os(darwin)
      cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

executable simple
  main-is:              Simple.hs
  hs-source-dirs:       example
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:
      base
    , haskakafka
    , bytestring

executable basic
  main-is:              Basic.hs
  hs-source-dirs:       example
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:
      base
    , haskakafka
    , bytestring
    , cmdargs
    , pretty-show

test-suite tests
  type: exitcode-stdio-1.0
  Default-language:    Haskell2010
  Main-Is: TestMain.hs
  HS-Source-Dirs: tests
  ghc-options: -Wall -threaded
  build-depends:  base >=4.6 && < 5
                , bytestring
                , containers
                , haskakafka
                , hspec
                , regex-posix
                , either-unwrap
